✅ Make some tests pass again